releases-istio/apps/cassandra.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cassandra
  name: cassandra
  namespace: nordmart-dev-apps
spec:
  clusterIP: None
  ports:
    - port: 9042
  selector:
    app: cassandra
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: cassandra
  namespace: nordmart-dev-apps
spec:
  serviceName: cassandra
  replicas: 1
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      containers:
        - name: cassandra
          image: cassandra:3
          ports:
            - containerPort: 7000
              name: intra-node
            - containerPort: 7001
              name: tls-intra-node
            - containerPort: 7199
              name: jmx
            - containerPort: 9042
              name: cql
          volumeMounts:
            - name: cassandra-pvc
              mountPath: /var/lib/cassandra
  volumeClaimTemplates:
    - metadata:
        name: cassandra-pvc
        annotations:
          volume.beta.kubernetes.io/storage-class: stakater-storageclass
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: stakater-storageclass
        resources:
          requests:
            storage: 1Gi
