releases-istio/apps/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-svc
  namespace: nordmart-dev-apps
spec:
  ports:
    - name: "elasticsearch-port"
      port: 9200
      targetPort: 9200
  selector:
    app: elasticsearch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: nordmart-dev-apps
spec:
  serviceName: "elasticsearch"
  selector:
    matchLabels:
      app: elasticsearch
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - image: elasticsearch:7.5.1
          name: elasticsearch
          ports:
            - containerPort: 9200
              name: tcp
#          volumeMounts:
#            - mountPath: /data
#              name: elasticsearch-pvc
#  volumeClaimTemplates:
#    - metadata:
#        name: elasticsearch-pvc
#      spec:
#        accessModes: [ "ReadWriteOnce" ]
#        storageClassName: stakater-storageclass
#        resources:
#          requests:
#            storage: 5Gi
