releases-istio/apps/mongdb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: nordmart-dev-apps
spec:
  serviceName: "mongodb"
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mongodb
    spec:   
 
      containers:
      - image: mongo:3.4
        name: mongodb
        ports:
        - containerPort: 27017
          name: tcp
        volumeMounts:
        - mountPath: /data/db
          name: mongodb-pvc      
        resources: {}

  volumeClaimTemplates:
  - metadata:
      name: mongodb-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: stakater-storageclass
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb-svc
  namespace: nordmart-dev-apps
spec:
  ports:
  - name: "mongo-port"
    port: 27017
    targetPort: 27017
  selector:
    app: mongodb
#---
#apiVersion: security.istio.io/v1beta1
#kind: AuthorizationPolicy
#metadata:
#  name: mongodb-policy
#  namespace: nordmart-dev-apps
#spec:
#  selector:
#    matchLabels:
#      app: mongodb
#  rules:
#    - from:
#        - source:
#            principals: ["cluster.local/ns/nordmart-dev-apps/sa/review"]
#      to:
#        - operation:
#            ports: ["27017"]
