releases-istio/apps/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql-svc
  namespace: nordmart-dev-apps
spec:
  ports:
  - name: "mysql-port"
    port: 3306
    targetPort: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: nordmart-dev-apps
spec:
  serviceName: "mysql"
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mysql
    spec:   

      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: tcp
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-pvc
        resources: {}          
  volumeClaimTemplates:
  - metadata:
      name: mysql-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: STORAGE_CLASS_NAME
      resources:
        requests:
          storage: 1Gi
---
#apiVersion: security.istio.io/v1beta1
#kind: AuthorizationPolicy
#metadata:
#  name: mysql-policy
#  namespace: nordmart-dev-apps
#spec:
#  selector:
#    matchLabels:
#      app: mysql
#  rules:
#    - from:
#        - source:
#            principals: ["cluster.local/ns/nordmart-dev-apps/sa/catalog"]
#      to:
#        - operation:
#            ports: ["3306"]
