releases-istio/apps/gateway-helm-release.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-dev-virtualservice
  namespace: istio-system
spec:
  hosts:
    - "gateway-dev.DOMAIN"
  gateways:
    - istio-gateway
  http:
    - route:
        - destination:
            host: gateway.nordmart-dev-apps.svc.cluster.local
