releases-istio/apps/web-helm-release.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-dev-virtualservice
  namespace: istio-system
spec:
  hosts:
    - "web-dev.DOMAIN"
  gateways:
    - istio-gateway
  http:
    - route:
        - destination:
            host: web.nordmart-dev-apps.svc.cluster.local
